--- a/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/function2.htm
+++ b/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/function2.htm
@@ -1,6 +1,6 @@
 
-                      <head>
-                    <style>
+      				<head>
+					<style>
 <!--
 BODY{font:x-small 'Verdana';margin-right:1.5em}
 .e{margin-left:1em;text-indent:-1em;margin-right:1em}
@@ -8,173 +8,178 @@ BODY{font:x-small 'Verdana';margin-right:1.5em}
 .tx{font-weight:bold}
 -->
                     </style>
-                    </head>
+					</head>
 
-                    <div align="center">
-                        <table border="0" width="184" id="table18" cellspacing="0" cellpadding="0">
-                            <tr>
-                                <td>&nbsp;</td>
-                            </tr>
-                            <tr>
-                                <td>
-                            <font color="#DB0F21">
-                            <img border="0" src="../images/small_logos/kat.gif"></font></td>
-                            </tr>
-                            <tr>
-                                <td>
-                                <div align="center">
-                                    <table border="0" width="96%" id="table24" cellspacing="0" cellpadding="0">
-                                        <tr>
-                                            <td><font size="1" color="#DB0F21"><br />
-                                            </font>
-                                            <b>
-                                            <font color="#DB0F21" size="1">
-                                            [CATEGORY_SUBLIST]</font></b></td>
-                                        </tr>
-                                    </table>
-                                </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>&nbsp;</td>
-                            </tr>
-                            <tr>
-                                <td>
-                            <font color="#DB0F21">
-                            <img border="0" src="../images/small_logos/servicezone.gif"></font></td>
-                            </tr>
-                            <tr>
-                                <td>
-                                <div align="center">
-                                    <table border="0" width="96%" id="table19" cellspacing="0" cellpadding="0">
-                                        <tr>
-                                            <td><b>
-                                            <font face="Verdana" color="#0000FF" style="font-size: 8pt">
-                        <br />
-                                            </font>
-                        </b><font face="Verdana" style="font-size: 8pt">
-                                        <a href="default.aspx?pageToShow=WebPage&PreKatNr=-999&WebPage=Download">
-                        <span style="text-decoration: none">Bedienungsanleitung 
-                                            Bespannmaschinen</span></a><font color="#0000FF"><br />
-                                            </font>
-                                        <a href="default.aspx?pageToShow=WebPage&PreKatNr=-999&WebPage=Download">
-                        <span style="text-decoration: none">Stringing Machine 
-                                            Manuals</span></a></font><font face="Verdana" color="#0000FF" style="font-size: 8pt"><b><br />
-                        </b>
-                        <span style="text-decoration: none">
-                                            <a target="_blank" href="http://www.arfaian.com/newsletter/newsletter.htm">Aktueller Newsletter</a></span></font></td>
-                                        </tr>
-                                    </table>
-                                </div>
-                                </td>
-                            </tr>
-                            </table>
-                    </div>
-                    <div align="center">
-                        <table border="0" width="184" id="table22" cellspacing="0" cellpadding="0" height="391">
-                            <tr>
-                                <td height="18"></td>
-                            </tr>
-                            <tr>
-                                <td height="30">
-                            <img border="0" src="../images/small_logos/resources.gif"></td>
-                            </tr>
-                            <tr>
-                                <td height="65">
-                                <div align="center">
-                                    <table border="0" width="96%" id="table23" cellspacing="0" cellpadding="0">
-                                        <tr>
-                                            <td><b>
-                                            <font face="Verdana" color="#DB0F21" style="font-size: 8pt">
-                        <br />
-                                            </font></b>
-                                            <font face="Verdana" style="font-size: 8pt">
-                                            <a href="default.aspx?pageToShow=WebPage&PreKatNr=-999&WebPage=AGB">AGB</a><br />
-                                            <a href="default.aspx?pageToShow=WebPage&PreKatNr=-999&WebPage=Datenschutz">Datenschutz</a><br />
-                                            <a href="default.aspx?pageToShow=WebPage&PreKatNr=-999&WebPage=Kontakt">Kontakt</a><br />
-                                            <a href="default.aspx?pageToShow=WebPage&PreKatNr=-999&WebPage=Lieferung">Lieferung</a></font><br />
+					<div align="center">
+						<table border="0" width="184" id="table18" cellspacing="0" cellpadding="0">
+							<tr>
+								<td></td>
+							</tr>
+							<tr>
+								<td>
+							<font color="#DB0F21">
+							<img border="0" src="../images/small_logos/kat.gif"></font></td>
+							</tr>
+							<tr>
+								<td>
+								<div align="center">
+									<table border="0" width="96%" id="table24" cellspacing="0" cellpadding="0">
+										<tr>
+											<td><font size="1" color="#DB0F21"><br>
+											</font>
+											<b>
+											<font color="#DB0F21" size="1">
+											[CATEGORY_SUBLIST_WITHPARENTS]</font></b></td>
+										</tr>
+									</table>
+								</div>
+								</td>
+							</tr>
+							<tr>
+								<td></td>
+							</tr>
+							<tr>
+								<td>
+							<p align="center">
+							<a href="http://www.facebook.com/pages/arfaiancom-Pros-Pro-Tennisartikel/145226518824116" target="_blank">
+								<img border="0" src="http://www.arfaian.com/facebook.gif" vspace="1"></a></td>
+							</tr>
+							<tr>
+								<td>
+							<font color="#DB0F21">
+							<img border="0" src="../images/small_logos/servicezone.gif"></font></td>
+							</tr>
+							<tr>
+								<td>
+								<div align="center">
+									<table border="0" width="96%" id="table19" cellspacing="0" cellpadding="0">
+										<tr>
+											<td><b>
+											<font face="Verdana" color="#0000FF" style="font-size: 8pt">
+						<br>
+											</font>
+						</b><font face="Verdana" style="font-size: 8pt">
+										<a href="default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=Download">
+						<span style="text-decoration: none">Bedienungsanleitung 
+											Bespannmaschinen</span></a><font color="#0000FF"><br>
+											</font>
+										<a href="default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=Download">
+						<span style="text-decoration: none">Stringing Machine 
+											Manuals</span></a></font><font face="Verdana" color="#0000FF" style="font-size: 8pt"><b><br>
+						</b>
+						<span style="text-decoration: none">
+											<a target="_blank" href="http://www.arfaian.com/newsletter/newsletter.htm">Aktueller Newsletter</a></span></font></td>
+										</tr>
+									</table>
+								</div>
+								</td>
+							</tr>
+							</table>
+					</div>
+					<div align="center">
+						<table border="0" width="184" id="table22" cellspacing="0" cellpadding="5" height="391">
+							<tr>
+								<td height="18"></td>
+							</tr>
+							<tr>
+								<td height="30">
+							<img border="0" src="../images/small_logos/resources.gif"></td>
+							</tr>
+							<tr>
+								<td height="65">
+								<div align="center">
+									<table border="0" width="96%" id="table23" cellspacing="0" cellpadding="0">
+										<tr>
+											<td><b>
+											<font face="Verdana" color="#DB0F21" style="font-size: 8pt">
+						<br>
+											</font></b>
+											<font face="Verdana" style="font-size: 8pt">
+											<a href="default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=AGB">AGB</a><br>
+											<a href="default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=Datenschutz">Datenschutz</a><br>
+											<a href="default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=Kontakt">Kontakt</a><br>
+											<a href="default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=Lieferung">Lieferung</a></font><br>
                                             <span style="font-size: 8pt">
-                                            <a href="default.aspx?pageToShow=WebPage&PreKatNr=-999&WebPage=Impressum">
+                                            <a href="default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=Impressum">
                                             Impressum</a></span></td>
-                                        </tr>
-                                    </table>
-                                </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td height="18"></td>
-                            </tr>
-                            <tr>
-                                <td height="30">
-                            <img border="0" src="../images/small_logos/warenkorb.gif"></td>
-                            </tr>
-                            <tr>
-                                <td height="26">
-                                <div align="center">
-                                    <table border="0" width="96%" id="table25" cellspacing="0" cellpadding="0">
-                                        <tr>
-                                            <td><font face="Verdana">
-                                            <font color="#DB0F21" style="font-size: 8pt">
-                                            <b>
-                                            <br />
-                                        </b></font><font style="font-size: 8pt">[BASKET_STATE]<br />
-                                                Newsletter: [NEWSLETTER]</font></font></td>
-                                        </tr>
-                                    </table>
-                                </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td height="18"></td>
-                            </tr>
-                            <tr>
-                                <td height="30">
-                                <p align="center">
-        <a href="default.aspx?pageToShow=WebPage&PreKatNr=-999&WebPage=Lieferung">
-        <img border="0" src="../images/boxes/aktion.gif"></a></td>
-                            </tr>
-                            <tr>
-                                <td height="30">
-                                <p align="center">
-        &nbsp;</td>
-                            </tr>
-                            <tr>
-                                <td align="center" height="24">
-                                <p align="center">
-                                <a href="default.aspx?ArtNr=2911">
-        <img border="0" src="../images/boxes/box_2.gif"></a></td>
-                            </tr>
-                            <tr>
-                                <td align="center" height="17">
-                                <b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></td>
-                            </tr>
-                            <tr>
-                                <td align="center" height="24">
-                                &nbsp;</td>
-                            </tr>
-                            <tr>
-                                <td align="center" height="24">
-                                <p align="center">
-                                <a href="default.aspx?ArtNr=6198">
-        <img border="0" src="../images/boxes/box_3.gif"></a></td>
-                            </tr>
-                            <tr>
-                                <td align="center" height="17">
-                                <b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></td>
-                            </tr>
-                            <tr>
-                                <td align="center" height="17">
-                                </td>
-                            </tr>
-                            <tr>
-                                <td align="center" height="17">
-                                </td>
-                            </tr>
-                            </table>
-                    </div>
+										</tr>
+									</table>
+								</div>
+								</td>
+							</tr>
+							<tr>
+								<td height="18"></td>
+							</tr>
+							<tr>
+								<td height="30">
+							<img border="0" src="../images/small_logos/warenkorb.gif"></td>
+							</tr>
+							<tr>
+								<td height="26">
+								<div align="center">
+									<table border="0" width="96%" id="table25" cellspacing="0" cellpadding="0">
+										<tr>
+											<td><font face="Verdana">
+											<font color="#DB0F21" style="font-size: 8pt">
+											<b>
+											<br>
+										</b></font><font style="font-size: 8pt">[BASKET_STATE]<br />
+                                                <font color="#FFFFFF">Newsletter: 
+											</font>[NEWSLETTER]</font></font></td>
+										</tr>
+									</table>
+								</div>
+								</td>
+							</tr>
+							<tr>
+								<td height="18">
+								<p align="center">
+		<a href="default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=Lieferung">
+		<img border="0" src="../images/boxes/aktion.gif"></a></td>
+							</tr>
+							<tr>
+								<td height="18">
+								<p align="center">
+		<a href="default.asp?ArtNr=10309">
+					<img border="0" src="skins/skin_arfaian_2009/images/boxes/4.gif"></a></td>
+							</tr>
+							<tr>
+								<td height="18">
+								<p align="center">
+								<a href="default.asp?ArtNr=10414">
+					<img border="0" src="skins/skin_arfaian_2009/images/boxes/5.gif"></a></td>
+							</tr>
+							<tr>
+								<td height="10">
+								<p align="center" style="margin-top: 0; margin-bottom: 0">
+		<a href="default.asp?ArtNr=10088">
+					<img border="0" src="skins/skin_arfaian_2009/images/boxes/1.gif"></a></td>
+							</tr>
+							<tr>
+								<td height="18">
+								<p align="center">
+		<a href="default.asp?ArtNr=1343">
+					<img border="0" src="skins/skin_arfaian_2009/images/boxes/2.gif"></a></td>
+							</tr>
+							<tr>
+								<td height="10">
+								<p align="center">
+		<a href="default.asp?ArtNr=10024">
+					<img border="0" src="skins/skin_arfaian_2009/images/boxes/3.gif"></a></td>
+							</tr>
+							<tr>
+								<td height="10">
+								<p align="center" style="margin-top: 0; margin-bottom: 0">
+		<a href="default.asp?ArtNr=10403">
+					<img border="0" src="skins/skin_arfaian_2009/images/boxes/6.gif"></a></td>
+							</tr>
+							<tr>
+								<td height="10">
+								<p align="center"></td>
+							</tr>
+							<tr>
+								<td height="10">
+								<p align="center"></td>
+							</tr>
+							</table>
+					</div>
