--- a/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_grip.htm
+++ b/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_grip.htm
@@ -11,112 +11,188 @@ BODY{font:x-small 'Verdana';margin-right:1.5em}
 .t{color:#990000}
 .g{margin-top: 1em; margin-bottom: 1em}
 div.Section1
-    {page:Section1;}
+	{page:Section1;}
 -->
 </style>
 </head>
 
-<table border="0" width="100%" id="table92" cellspacing="0" cellpadding="0">
-    <tr>
-        <td valign="top" width="200">
-                    <p align="center">
-                    [FUNCTION2]</td>
-        <td valign="top">
-        <div align="center">
-            <table border="0" width="70%" id="table93" cellspacing="0" cellpadding="0">
-                <tr>
-                    <td>
-                    <div align="center">
-                        <table border="0" width="640" id="table94" cellspacing="0" cellpadding="0">
-                            <tr>
-                                <td align="left" colspan="3" width="492"><br />
-                                <span style="font-size: 3pt">
-                    <img border="0" src="../images/start/pfeil_rechts.gif"></span><b><font color="#FF0000">
-                                </font></b><font color="#CB0C04"><b>Bitte beachten Sie 
-                                unser weiteres Griffbandsortiment!</b><br />
-&nbsp;</font></td>
-                            </tr>
-                            <tr>
-                                <td width="215">
-                                <a href="default.aspx?ArtNr=2407">
-                    <img border="0" src="../images/start/premium_30.gif"></a></td>
-                                <td width="209">
-                                <a href="default.aspx?ArtNr=2394">
-                    <img border="0" src="../images/start/prestige_grip.gif"></a></td>
-                                <td width="216"><a href="default.aspx?ArtNr=2099">
-                    <img border="0" src="../images/start/string/03.gif"></a></td>
-                            </tr>
-                            <tr>
-                                <td align="center" width="215"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></font></td>
-                                <td align="center" width="209"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></font></td>
-                                <td align="center" width="216"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></font></td>
-                            </tr>
-                            <tr>
-                                <td width="215">
-                                <p align="center"><a href="default.aspx?ArtNr=2357">
-                    <img border="0" src="../images/start/string/04.gif" align="left"></a></td>
-                                <td width="209">
-                                <p align="center"><a href="default.aspx?ArtNr=2326">
-                    <img border="0" src="../images/start/string/05.gif" align="left"></a></td>
-                                <td width="216">
-                                <p align="center">
-                                <a href="default.aspx?ArtNr=2428">
-                    <img border="0" src="../images/start/string/06.gif" align="left"></a></td>
-                            </tr>
-                            <tr>
-                                <td align="center" width="215"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></td>
-                                <td align="center" width="209"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></td>
-                                <td align="center" width="216"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></td>
-                            </tr>
-                            <tr>
-                                <td width="215">
-                                <a href="default.aspx?ArtNr=2368">
-                    <img border="0" src="../images/start/string/07.gif"></a></td>
-                                <td width="209">
-                                <a href="default.aspx?ArtNr=2404">
-                    <img border="0" src="../images/start/string/08.gif"></a></td>
-                                <td width="216">
-                                <a href="default.aspx?ArtNr=2345">
-                    <img border="0" src="../images/start/string/09.gif"></a></td>
-                            </tr>
-                            <tr>
-                                <td align="center" width="215"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font color="#000000" style="font-size: 7pt">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></font></td>
-                                <td align="center" width="209"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font color="#000000" style="font-size: 7pt">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></font></td>
-                                <td align="center" width="216"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font color="#000000" style="font-size: 7pt">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></font></td>
-                            </tr>
-                        </table>
-                    </div>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        </td>
-    </tr>
+<table border="0" width="94%" id="table92" cellspacing="0" cellpadding="0">
+	<tr>
+		<td valign="top" width="200">
+					<p align="center">
+					[FUNCTION2]</td>
+		<td valign="top">
+		<div align="center">
+			<table border="0" width="57%" id="table93" cellspacing="0" cellpadding="0">
+				<tr>
+					<td>
+					<div align="center">
+						<table border="0" width="1004" id="table94" cellspacing="0" cellpadding="0">
+							<tr>
+								<td align="left" width="505">¡¡</td>
+								<td align="left" width="1000">¡¡</td>
+							</tr>
+							<tr>
+								<td align="left" width="505">¡¡</td>
+								<td align="left" width="1000"><font size="4"><b>
+								<i>Griffbänder</i></b></font><i><b><font size="4"> 
+								/ Tennis Grips</font></b></i></td>
+							</tr>
+							<tr>
+								<td align="left" width="505">¡¡</td>
+								<td align="left" width="1000">¡¡</td>
+							</tr>
+							<tr>
+								<td align="left" width="505">¡¡</td>
+								<td align="left" width="1000"><br>
+                                <b><font color="#FF0000">
+                                &nbsp;</font></b><i><font color="#CB0C04" size="4"><b>Bitte 
+								wählen Sie / please choose:</b></font></i><div align="center">
+									<table id="table96" border="0" cellSpacing="0" cellPadding="0" width="1000">
+										<tr>
+											<td colSpan="3">
+											<table id="table97" border="0" cellSpacing="0" cellPadding="0" width="100%">
+												<tr>
+													<td>
+													<table id="table98" border="0" cellSpacing="0" cellPadding="0" width="100%">
+														<tr>
+															<td vAlign="top" width="200">¡¡</td>
+														</tr>
+													</table>
+													</td>
+												</tr>
+											</table>
+											</td>
+										</tr>
+									</table>
+								</div>
+								<b><font color="#db0f21" size="5">
+								<div class="category">
+									<div align="center">
+										<table id="table99" border="0" cellSpacing="0" cellPadding="0" width="1000">
+											<tr>
+												<td colSpan="3">
+												<table id="table100" border="0" cellSpacing="0" cellPadding="0" width="100%">
+													<tr>
+														<td>
+														<table style="border-collapse: collapse" id="table101" border="0" cellSpacing="0" borderColor="#111111" cellPadding="0" width="100%" bgColor="#ffffff">
+															<tr>
+																<td height="1" vAlign="top" width="119">
+								</font></td>
+															</tr>
+														</table>
+														</td>
+													</tr>
+												</table>
+												</td>
+											</tr>
+										</table>
+									</div>
+									<font color="#db0f21" size="5">
+									<div class="category">
+									<a href="default.asp?PreKatNr=101">:: </a>
+										<a href="default.asp?PreKatNr=6">
+										Overgrips 3</a></div>
+									<!--6-->
+									<div class="category">
+									<a href="default.asp?PreKatNr=101">:: </a>
+										<a href="default.asp?PreKatNr=13">
+										Overgrips 60</a></div>
+									<!--13-->
+									<div class="category">
+									<a href="default.asp?PreKatNr=101">:: </a>
+										<a href="default.asp?PreKatNr=14">
+										Overgrips 30</a></div>
+									<!--14-->
+									<div class="category">
+									<a href="default.asp?PreKatNr=101">:: </a>
+										<a href="default.asp?PreKatNr=15">Basic 
+										Grips</a></div>
+								</div>
+								<div class="category">
+									¡¡</div>
+								<table border="0" width="100%" id="table102">
+									<tr>
+										<td>
+										<table border="0" width="994" id="table103" cellspacing="3" cellpadding="6">
+									<tr>
+								<td align="center" width="495">
+                                <p align="right">
+								<b>
+									<font color="#db0f21" size="5">
+								<sub><a href="default.asp?ArtNr=10377">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/1.gif"></a></sub></font></b></td>
+								<td align="center" width="489">
+                                <p align="left">
+								<b>
+									<font color="#db0f21" size="5">
+									<sub><a href="default.asp?ArtNr=10390">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/2.gif"></a></sub></font></b></td>
+									</tr>
+									<tr>
+								<b>
+									<font color="#db0f21" size="5">
+								<td align="center" width="495">
+                                <p align="right">
+								<b>
+									<font color="#db0f21" size="5">
+									<a href="default.asp?ArtNr=10384">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/3.gif"></a></font></b></td>
+								<td align="center" width="489">
+                                <p align="left">
+								<b>
+									<font color="#db0f21" size="5">
+									<a href="default.asp?ArtNr=10394">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/4.gif"></a></font></b></td>
+								</font></b>
+									</tr>
+									<tr>
+								<b>
+									<font color="#db0f21" size="5">
+								<td align="center" width="495">
+                                <p align="right">
+								<b>
+									<font color="#db0f21" size="5">
+									<a href="default.asp?ArtNr=10387">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/5.gif"></a></font></b></td>
+								<td align="center" width="489">
+                                <p align="left">
+								<b>
+									<font color="#db0f21" size="5">
+									<a href="default.asp?ArtNr=10396">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/6.gif"></a></font></b></td>
+								</font></b>
+									</tr>
+									<tr>
+								<b>
+									<font color="#db0f21" size="5">
+								<td align="center" width="495">
+                                <p align="right">
+								<b><font color="#db0f21" size="5">
+									<a href="default.asp?ArtNr=10381">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/7.gif"></a></font></b></td>
+								<td align="center" width="489">
+                                <p align="left">
+								<b>
+									<font color="#db0f21" size="5">
+									<a href="default.asp?ArtNr=1161">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/2-1.gif"></a></font></b></td>
+								</font></b>
+									</tr>
+									</table>
+										</td>
+									</tr>
+								</table>
+								</font></b>
+								<p><font color="#CB0C04"><br>
+¡¡</font></td>
+							</tr>
+							</table>
+					</div>
+					</td>
+				</tr>
+			</table>
+		</div>
+		</td>
+	</tr>
 </table>
