--- a/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_racket.htm
+++ b/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_racket.htm
@@ -11,77 +11,123 @@ BODY{font:x-small 'Verdana';margin-right:1.5em}
 .t{color:#990000}
 .g{margin-top: 1em; margin-bottom: 1em}
 div.Section1
-    {page:Section1;}
+	{page:Section1;}
 -->
 </style>
 </head>
 
-<table border="0" width="100%" id="table92" cellspacing="0" cellpadding="0">
-    <tr>
-        <td valign="top" width="200">
-                    <p align="center">
-                    [FUNCTION2]</td>
-        <td valign="top">
-        <div align="center">
-            <table border="0" width="89%" id="table93" cellspacing="0" cellpadding="0">
-                <tr>
-                    <td>
-                    <div align="center">
-                        <table border="0" width="505" id="table94" cellspacing="0" cellpadding="0">
-                            <tr>
-                                <td align="left" colspan="2" width="505"><br />
-                                <span style="font-size: 3pt">
-                    <img border="0" src="../images/start/pfeil_rechts.gif"></span><b><font color="#FF0000">
-                                </font></b><font color="#CB0C04"><b>Bitte beachten Sie 
-                                unser weiteres Schlägersortiment!</b><br />
-&nbsp;</font></td>
-                            </tr>
-                            <tr>
-                                <td align="center" width="261">
-                                <a href="default.aspx?ArtNr=1085">
-                    <img border="0" src="../images/start/racket/01.gif"></a></td>
-                                <td align="center" width="244">
-                                <a href="default.aspx?ArtNr=5101">
-                    <img border="0" src="../images/start/racket/02.gif"></a></td>
-                            </tr>
-                            <tr>
-                                <td align="center" width="261">
-                                <b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></td>
-                                <td align="center" width="244">
-                                <b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></td>
-                            </tr>
-                            <tr>
-                                <td align="center" width="261">
-                                <a href="default.aspx?ArtNr=2913">
-                    <img border="0" src="../images/start/racket/03.gif"></a></td>
-                                <td align="center" width="244">
-                                <a href="default.aspx?ArtNr=1082">
-                    <img border="0" src="../images/start/racket/04.gif"></a></td>
-                            </tr>
-                            <tr>
-                                <td align="center" width="261">
-                                <font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font color="#000000" style="font-size: 7pt">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></font></td>
-                                <td align="center" width="244">
-                                <font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font color="#000000" style="font-size: 7pt">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></font></td>
-                            </tr>
-                            </table>
-                    </div>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        </td>
-    </tr>
+<table border="0" width="82%" id="table92" cellspacing="0" cellpadding="0">
+	<tr>
+		<td valign="top" width="200">
+					<p align="center">
+					[FUNCTION2]</td>
+		<td valign="top">
+		<div align="center">
+			<table border="0" width="57%" id="table93" cellspacing="0" cellpadding="0">
+				<tr>
+					<td>
+					<div align="center">
+						<table border="0" width="1004" id="table94" cellspacing="0" cellpadding="0">
+							<tr>
+								<td align="left" width="505"></td>
+								<td align="left" width="1000"></td>
+							</tr>
+							<tr>
+								<td align="left" width="505"></td>
+								<td align="left" width="1000"><i><b>
+								<font size="4">Tennisschläger / Tennisrackets</font></b></i></td>
+							</tr>
+							<tr>
+								<td align="left" width="505"></td>
+								<td align="left" width="1000"></td>
+							</tr>
+							<tr>
+								<td align="left" width="505"></td>
+								<td align="left" width="1000"><br>
+                                <b><font color="#FF0000">
+                                &nbsp;</font></b><i><font color="#CB0C04" size="4"><b>Bitte 
+								wählen Sie / please choose:</b></font></i><div align="center">
+									<table id="table96" border="0" cellSpacing="0" cellPadding="0" width="1000">
+										<tr>
+											<td colSpan="3">
+											<table id="table97" border="0" cellSpacing="0" cellPadding="0" width="100%">
+												<tr>
+													<td>
+													<table id="table98" border="0" cellSpacing="0" cellPadding="0" width="100%">
+														<tr>
+															<td vAlign="top" width="200"></td>
+														</tr>
+													</table>
+													</td>
+												</tr>
+											</table>
+											</td>
+										</tr>
+									</table>
+								</div>
+								<b><font color="#db0f21" size="5">
+								<div class="category">
+									<a href="default.asp?PreKatNr=101">:: 
+									Kinderschläger / Junior Rackets</a></div>
+								<!--101-->
+								<div class="category">
+									<a href="default.asp?PreKatNr=102">:: 
+									Tennisschläger / Tennis Rackets</a></div>
+								</font></b>
+								<p>
+								<table border="0" width="826" id="table99" cellspacing="0" cellpadding="0">
+									<tr>
+								<td align="center" width="826" colspan="5">
+                                <p style="margin-left: 266px">
+                                <a href="default.asp?ArtNr=10146">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/racket/1-1-2.gif"></a></td>
+									</tr>
+									<tr>
+								<td nowrap width="1240" colspan="5">
+                                ¡¡</td>
+									</tr>
+									<tr>
+								<td nowrap width="654" height="95">
+                                <p align="right">
+                                <a href="default.asp?ArtNr=10295">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/racket/3-1.gif"></a></td>
+								<td nowrap width="7" height="95">
+                                ¡¡</td>
+								<td nowrap width="26" align="center" valign="top" height="95">
+                                <p style="margin-top: 0; margin-bottom: 0" align="right">
+								<a href="default.asp?ArtNr=1424">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/racket/3-2(2-1).gif"></a></p>
+								<p style="margin-top: 0; margin-bottom: 0" align="right">
+								<a href="default.asp?ArtNr=1429">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/racket/3-2(2-2).gif"></a></p>
+								<p style="margin-top: 0; margin-bottom: 0" align="right">
+								<a href="default.asp?ArtNr=1427">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/racket/3-2(2-3).gif"></a></td>
+								<td nowrap width="26" align="center" valign="top" height="95">
+                                <p align="justify">
+								<a href="default.asp?ArtNr=1426">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/racket/3-2(1).gif"></a></td>
+								<td nowrap width="527" align="center" valign="top" height="95">
+                                <p style="margin-top: 0; margin-bottom: 0" align="left">
+								<a href="default.asp?ArtNr=1426">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/racket/3-2(3-1).gif"></a></p>
+								<p style="margin-top: 0; margin-bottom: 0" align="left">
+								<a href="default.asp?ArtNr=1425">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/racket/3-2(3-2).gif"></a></p>
+								<p style="margin-top: 0; margin-bottom: 0" align="left">
+								<a href="default.asp?ArtNr=1425">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/racket/3-2(3-3).gif"></a></td>
+									</tr>
+									</table>
+								<p><font color="#CB0C04"><br>
+</font></td>
+							</tr>
+							</table>
+					</div>
+					</td>
+				</tr>
+			</table>
+		</div>
+		</td>
+	</tr>
 </table>
