--- a/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_string.htm
+++ b/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_string.htm
@@ -1,7 +1,7 @@
 
 
 <head>
-<style>
+<style> 
 <!--
 .tx{font-weight:bold}
 BODY{font:x-small 'Verdana';margin-right:1.5em}
@@ -11,114 +11,161 @@ BODY{font:x-small 'Verdana';margin-right:1.5em}
 .t{color:#990000}
 .g{margin-top: 1em; margin-bottom: 1em}
 div.Section1
-    {page:Section1;}
+	{page:Section1;}
 -->
 </style>
 </head>
 
-<table border="0" width="100%" id="table92" cellspacing="0" cellpadding="0">
-    <tr>
-        <td valign="top" width="200">
-                    <p align="center">
-                    [FUNCTION2]</td>
-        <td valign="top">
-        <div align="center">
-            <table border="0" width="70%" id="table93" cellspacing="0" cellpadding="0">
-                <tr>
-                    <td>
-                    <div align="center">
-                        <table border="0" width="640" id="table94" cellspacing="0" cellpadding="0">
-                            <tr>
-                                <td align="left" colspan="3" width="492"><br />
-                                <span style="font-size: 3pt">
-                    <img border="0" src="../images/start/pfeil_rechts.gif"></span><b><font color="#FF0000">
-                                </font></b><font color="#CB0C04"><b>Bitte beachten Sie 
-                                unser weiteres Saitensortiment!</b><br />
-&nbsp;</font></td>
-                            </tr>
-                            <tr>
-                                <td width="215">
-                                <a href="default.aspx?ArtNr=2632">
-                    <img border="0" src="../images/start/string/red_devil.gif"></a></td>
-                                <td width="209">
-                                <a href="default.aspx?ArtNr=2169">
-                    <img border="0" src="../images/start/string/cyber-spin.gif"></a></td>
-                                <td width="216">
-                                <a href="default.aspx?ArtNr=2099">
-                    <img border="0" src="../images/start/string/cyber_power.gif"></a></td>
-                            </tr>
-                            <tr>
-                                <td align="center" width="215"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></font></td>
-                                <td align="center" width="209"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></font></td>
-                                <td align="center" width="216"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></font></td>
-                            </tr>
-                            <tr>
-                                <td width="215">
-                                <p align="center">
-                                <a href="default.aspx?ArtNr=2607">
-                    <img border="0" src="../images/start/string/hexaspin.gif" align="left"></a></td>
-                                <td width="209">
-                                <p align="center"><a href="default.aspx?ArtNr=2326">
-                    <img border="0" src="../images/start/string/05.gif" align="left"></a></td>
-                                <td width="216">
-                                <p align="center">
-                                <a href="default.aspx?ArtNr=2452">
-                    <img border="0" src="../images/start/string/06.gif" align="left"></a></td>
-                            </tr>
-                            <tr>
-                                <td align="center" width="215"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></td>
-                                <td align="center" width="209"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></td>
-                                <td align="center" width="216"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></td>
-                            </tr>
-                            <tr>
-                                <td width="215">
-                                <a href="default.aspx?ArtNr=2381">
-                    <img border="0" src="../images/start/string/plus_power.gif"></a></td>
-                                <td width="209">
-                                <a href="default.aspx?ArtNr=2901">
-                    <img border="0" src="../images/start/string/08.gif"></a></td>
-                                <td width="216">
-                                <a href="default.aspx?ArtNr=2644">
-                    <img border="0" src="../images/start/string/powercable.gif"></a></td>
-                            </tr>
-                            <tr>
-                                <td align="center" width="215"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font color="#000000" style="font-size: 7pt">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></font></td>
-                                <td align="center" width="209"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font color="#000000" style="font-size: 7pt">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></font></td>
-                                <td align="center" width="216"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
-                                <font color="#000000" style="font-size: 7pt">inkl. Mwst + ggf. 
-                                zzgl. Versandkosten</font></a></b></font></td>
-                            </tr>
-                        </table>
-                    </div>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        </td>
-    </tr>
+<table border="0" width="94%" id="table92" cellspacing="0" cellpadding="0">
+	<tr>
+		<td valign="top" width="200">
+					<p align="center">
+					[FUNCTION2]</td>
+		<td valign="top">
+		<div align="center">
+			<table border="0" width="57%" id="table93" cellspacing="0" cellpadding="0">
+				<tr>
+					<td>
+					<div align="center">
+						<table border="0" width="1004" id="table94" cellspacing="0" cellpadding="0">
+							<tr>
+								<td align="left" width="505"></td>
+								<td align="left" width="1000"></td>
+							</tr>
+							<tr>
+								<td align="left" width="505"></td>
+								<td align="left" width="1000"><i><b>
+								<font size="4">Tennissaiten / Tennis Strings</font></b></i></td>
+							</tr>
+							<tr>
+								<td align="left" width="505"></td>
+								<td align="left" width="1000"></td>
+							</tr>
+							<tr>
+								<td align="left" width="505"></td>
+								<td align="left" width="1000"><br>
+                                <b><font color="#FF0000">
+                                &nbsp;</font></b><i><font color="#CB0C04" size="4"><b>Bitte 
+								wählen Sie / please choose:</b></font></i><div align="center">
+									<table id="table96" border="0" cellSpacing="0" cellPadding="0" width="1000">
+										<tr>
+											<td colSpan="3">
+											<table id="table97" border="0" cellSpacing="0" cellPadding="0" width="100%">
+												<tr>
+													<td>
+													<table id="table98" border="0" cellSpacing="0" cellPadding="0" width="100%">
+														<tr>
+															<td vAlign="top" width="200"></td>
+														</tr>
+													</table>
+													</td>
+												</tr>
+											</table>
+											</td>
+										</tr>
+									</table>
+								</div>
+								<font color="#db0f21" size="5">
+								<b>
+								<div class="category">
+									<div align="center">
+										<table id="table99" border="0" cellSpacing="0" cellPadding="0" width="1000">
+											<tr>
+												<td colSpan="3">
+												<table id="table100" border="0" cellSpacing="0" cellPadding="0" width="100%">
+													<tr>
+														<td>
+														<table style="border-collapse: collapse" id="table101" border="0" cellSpacing="0" borderColor="#111111" cellPadding="0" width="100%" bgColor="#ffffff">
+															<tr>
+																<td height="1" vAlign="top" width="119">
+								</font><b><i><font color="#CB0C04" size="4">200m</font></i></b></td>
+															</tr>
+														</table>
+														</td>
+													</tr>
+												</table>
+												</td>
+											</tr>
+										</table>
+									</div>
+									<font color="#db0f21" size="5">
+									<div class="category">
+										<a href="default.asp?PreKatNr=101">:: </a>
+										<a href="default.asp?PreKatNr=34">
+										Hybridsaiten 200m</a></div>
+									<!--34-->
+									<div class="category">
+										<a href="default.asp?PreKatNr=101">:: </a>
+										<a href="default.asp?PreKatNr=32">
+										Polyester / Monofil 200m</a></div>
+									<!--32-->
+									<div class="category">
+										<a href="default.asp?PreKatNr=101">:: </a>
+										<a href="default.asp?PreKatNr=33">
+										Synthetik / Multifil 200m</a></div>
+								</div>
+								</font></b>
+								<p><font color="#CB0C04"><br>
+								</font><i><font color="#CB0C04" size="4"><b>12m</b></font></i><b><font color="#db0f21" size="5"><div class="category">
+									<a href="default.asp?PreKatNr=101">:: </a>
+									<a href="default.asp?PreKatNr=37">
+									Hybridsaiten</a></div>
+								<!--37-->
+								<div class="category">
+									<a href="default.asp?PreKatNr=101">:: </a>
+									<a href="default.asp?PreKatNr=35">Polyester 
+									/ Monofil 12m</a></div>
+								<!--35-->
+								<div class="category">
+									<a href="default.asp?PreKatNr=101">:: </a>
+									<a href="default.asp?PreKatNr=36">Synthetik 
+									/ Multifil 12m</a><p></div>
+								</font></b>
+								<table border="0" width="100%" id="table102">
+									<tr>
+										<td>
+										<table border="0" width="100%" id="table103" cellspacing="3" cellpadding="6">
+									<tr>
+								<td align="center">
+                                <p align="right">
+                                <a href="default.asp?ArtNr=10077">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/string/1-1.gif"></a></td>
+								<td align="left">
+                                <a href="default.asp?ArtNr=10007">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/string/1-2.gif"></a></td>
+									</tr>
+									<tr>
+								<font color="#db0f21" size="5">
+								<td align="center">
+                                <p align="right">
+                                <a href="default.asp?ArtNr=10244">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/string/2-1.gif"></a></td>
+								<td align="left">
+                                <a href="default.asp?ArtNr=10481">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/string/2-2.gif"></a></td>
+									</tr>
+									<tr>
+								<font color="#db0f21" size="5">
+								<td align="center">
+                                <p align="right">
+                                <a href="default.asp?ArtNr=10302">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/string/3-1.gif"></a></td>
+								<td align="left">
+                                <a href="default.asp?ArtNr=10300">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/string/3-2.gif"></a></td>
+									</tr>
+									</table>
+										</td>
+									</tr>
+								</table>
+								</td>
+							</tr>
+							</table>
+					</div>
+					</td>
+				</tr>
+			</table>
+		</div>
+		</td>
+	</tr>
 </table>
